--- a/index.css
+++ b/index.css
@@ -57,7 +57,8 @@ h6 {
   height:70pt;  /* Determined by trial-and-error */
   white-space:pre;
   font-size:12pt;
-  text-align:center;
+  margin-left:auto;
+  margin-right:auto;
 }
 #DIRECTIONS {
   font-size:8pt;
